--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less-loader": "^4.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vux": "^2.7.7"
+    "vux": "^2.7.7",
+    "vux-loader": "^1.1.31"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
