--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
     "less-loader": "^4.0.5",
     "lib-flexible": "^0.3.2",
     "vue": "^2.5.2",
